<resources>
    <string name="app_name">APA Pocket Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">APA Referencing Guidelines</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_book">Book</string>
    <string name="menu_webpage">Web Page</string>
    <string name="menu_magazine">Magazine</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_material">Resources</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="tab_text_1">Reference List</string>
    <string name="tab_text_2">Paraphrase</string>
    <string name="tab_text_3">Quotation</string>
    <string name="app_title">APA Referencing Guide</string>
    <string name="app_head">Select a type of source.</string>
    <string name="btn_search">Options Filter</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_apply">Apply</string>
    <string name="str_home">Home Page</string>
    <string name="str_splash">APA Pocket Guide</string>

    <string name="str_guide">Guides</string>
    <string name="str_credit">Credits</string>
    <string name="str_apaword">APA Referencing in Word</string>
    <string name="str_examples">APA Guidelines for Sources</string>
    <string name="str_title">APA Pocket Guide</string>
    <string name="str_apa_important">Importance of Referencing</string>
    <string name="str_avoid_plagiarism">Avoiding Plagiarism</string>
    <string name="str_faq">FAQ</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="journals_or_periodicals">Journals or Periodicals</string>
    <string name="secondary_resource">Secondary Resource</string>
    <string name="electronic_sources">Electronic Sources</string>
    <string name="books">Books</string>
    <string name="guide">Guide</string>

    <string name="link_research_skills"><a href="https://moodle.ais.ac.nz/course/view.php?id=4#sectopn-5">Research Skills</a></string>
    <string name="link_writing_skills"><a href="https://moodle.ais.ac.nz/course/view.php?id=4#sectopn-3">Writing Skills</a></string>
    <string name="link_apa_official"><a href="https://apastyle.apa.org/">APA Style</a></string>
    <string name="link_apa_blog6"><a href="https://blog.apastyle.org/apastyle/apa-style-blog-6th-edition-archive.html">APA Style Blog (6th Edition)</a></string>
    <string name="link_apa_blog7"><a href="https://apastyle.apa.org/blog">APA Style Blog (7th Edition)</a></string>
    <string name="resources_study_skills">Study Skills (AIS Moodle)</string>
    <string name="resources_video_resources">Video Resources (YouTube)</string>
    <string name="resources_external_rewources">External Resources</string>
    <string name="bullet_link"><![CDATA[>]]></string>
    <string name="link_official_website">Official website</string>
    <string name="link_video1">Quotes, paraphrases &amp; summaries</string>
    <string name="link_video2">Paraphrasing and Avoiding Plagiarism</string>
    <string name="link_video3">The Art of Paraphrasing: Avoiding Plagiarism</string>
    <string name="link_video4">Paraphrasing Techniques</string>
    <string name="video_id_1">Ral3ldBxQxA</string>
    <string name="video_id_2">NMzoxRw6llU</string>
    <string name="video_id_3">H1qo10dG5Gw</string>
    <string name="video_id_4">7syE6AMRA7k</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">APA</string>
    <string name="slide_1_desc">A pocket guide about APA referencing</string>

    <string name="slide_2_title">Correct referencing style</string>
    <string name="slide_2_desc">Know Citation about Book, Journals, Website and so on </string>

    <string name="slide_3_title">Plagiarism</string>
    <string name="slide_3_desc">know what it is and how to avoid it</string>

    <string name="slide_4_title">FAQ</string>
    <string name="slide_4_desc">See Frequent asked questions and more</string>
</resources>
