<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAisGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAisBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/circle"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/circles" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/app_head"
                android:textColor="@color/colorAisBlack"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnBook"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAisRed"
                    android:drawableTop="@drawable/ic_button_book"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/menu_book"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/btnWebpage"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnWebpage"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorAisOrange1"
                    android:drawableTop="@drawable/ic_button_webpage"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/menu_webpage"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnBook"
                    app:layout_constraintTop_toTopOf="@+id/btnBook" />

                <Button
                    android:id="@+id/btnMagazine"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAisOrange2"
                    android:drawableTop="@drawable/ic_button_magazine"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/menu_magazine"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/btnJournal"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnBook" />

                <Button
                    android:id="@+id/btnJournal"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorAisMint"
                    android:drawableTop="@drawable/ic_button_journal"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/menu_journal"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btnMagazine"
                    app:layout_constraintTop_toTopOf="@+id/btnMagazine" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>